# cqdb-rs

./: Cargo.toml  README.md
.builds/: freebsd.yml  openbsd.yml
.github/workflows/: CI.yml
benches/: cqdb_bench.rs
ffi/: Cargo.toml  Config.cmake.in  README.md  build.rs  libcqdb.pc.in
ffi/include/: cqdb.h
ffi/src/: lib.rs  macros.rs
src/: c.rs  cqdb.rs  hash.rs  lib.rs  lookup3.rs
tests/: test_cqdb.rs
tests/fixtures/: test.cqdb
