[package]
name = "cqdb"
version = "0.5.3"
authors = ["messense <messense@icloud.com>"]
description = "Rust implementation of Constant Quark Database (CQDB)"
edition = "2018"
license = "MIT"
repository = "https://github.com/messense/cqdb-rs"
keywords = ["cdb", "cqdb", "crfsuite"]
readme = "README.md"

[[bench]]
name = "cqdb_bench"
harness = false

[dependencies]
array-init = "2.0.0"
bitflags = "1.2.1"
bstr = "0.2.14"
jhash = "0.1.1"

[dev-dependencies]
cqdb-sys = "0.1.0"
criterion = "0.3.4"
libc = "0.2.82"

[workspace]
members = [
    ".",
    "ffi"
]
