[package]
name = "cqdb"
version = "0.6.0"
authors = ["messense <messense@icloud.com>"]
description = "Rust implementation of Constant Quark Database (CQDB)"
edition = "2024"
license = "MIT"
repository = "https://github.com/messense/cqdb-rs"
keywords = ["cdb", "cqdb", "crfsuite"]
readme = "README.md"

[[bench]]
name = "cqdb_bench"
harness = false

[dependencies]
bitflags = "2.6.0"
bstr = { version = "1.11.1", default-features = false, features = ["std"] }
jhash = "0.1.1"

[dev-dependencies]
cqdb-sys = "0.1.2"
criterion = "0.5.1"
libc = "0.2.169"

[workspace]
members = [
    ".",
    "ffi"
]
