[package]
name = "libcqdb"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
links = "libcqdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqdb = { version = "0.2", path = "../" }
libc = "0.2.82"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
path-slash = "0.1.4"
