[package]
name = "libcqdb"
version = "0.3.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
links = "libcqdb"
description = "C binding to the Rust implementation of Constant Quark Database (CQDB)"
license = "MIT"
repository = "https://github.com/messense/cqdb-rs"
keywords = ["cdb", "cqdb", "crfsuite"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqdb = { version = "0.5", path = "../" }
libc = "0.2.82"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
path-slash = "0.1.4"
